xidlc/tests/invalid/http_stream_invalid_server_method.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidServerStreamMethodService {
    @server_stream
    @stream_codec("sse")
    @post(path = "/events")
    string watch();
};
